--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,10 @@
     min-height:700px;
     background: rgba(0,0,0,0.75);
 }
-
+.btn-dark:hover {
+    background: gray;
+}
+a { color: inherit; } 
 .background-gif { 
     color:white;
     height: 700px; background-attachment: fixed; 
