--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     top:0;
     left:0;
     width:100%;
-    min-height:55rem;
+    min-height:49rem;
     background: rgba(0,0,0,0.75);
 }
 .btn-dark:hover {
@@ -31,28 +31,19 @@ html, body {
 }
 
 /* Style the navbar */
-#navbar {
+.navbar {
     overflow: hidden;
-    background-color: #333;
-  }
-  
-  /* Navbar links */
-  #navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
-  
-  /* Page content */
-  .content {
-    padding: 16px;
+    background-color: #333; z-index:2 ;
   }
    
-  
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky + .content {
-    padding-top: 60px;
-  }
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
